# rusty-razer-tray

./: Cargo.toml  README.md
src/: main.rs
src/openrazer/: device.rs  manager.rs  mod.rs  types.rs
