[package]
name = "rusty-razer-tray"
version = "0.1.0"
edition = "2024"

[dependencies]
fs2 = "0.4.3"
ksni = "0.3.3"
roxmltree = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "time"] }
zbus = { version = "4.4.0", features = ["tokio"] }
zvariant = "4.2.0"
